<resources>
    <string name="app_name">classA</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="lets_count_together">Lets Count Together</string>
    <string name="_1">+1</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">ADD</string>
    <string name="test">TEST</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="dsc">DSC</string>
    <string name="show_image">show image</string>
    <string name="which_kind_of_burger_you_need_to_order">Which kind of burger you need to order?!</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="cheese">Cheese</string>
    <string name="onions">Onions</string>
    <string name="salad">Salad</string>
    <string name="order">Order</string>
    <string name="this_is_dsc_notification">This is DSC Notification</string>
    <string name="settings">Settings</string>
    <string name="members">Members</string>
    <string name="core_team">Core Team</string>
    <string name="log_out">Log Out</string>
    <string name="events">Events</string>
    <string name="enter_your_todo">Enter your todo</string>
    <string name="dummytext">DummyText</string>
    <string name="gdg_community">GDG Community</string>
    <string name="hello_there">HELLO THERE,</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="sign_in_to_continuo">sign in to continuo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="welcome">WELCOME,</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new journey</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="register">Register</string>
    <string name="base_activity">BASE ACTIVITY</string>
    <string name="ieslammedhat_gmail_com">ieslammedhat@gmail.com</string>
    <string name="eslam_medhat">Eslam Medhat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="remember_me">Remember me</string>
    <string name="home">Home</string>
    <string name="apps">Apps</string>
    <string name="my_profile">My Profile</string>
    <string name="home_fragment">HOME FRAGMENT</string>
    <string name="this_is_my_apps">THIS IS MY APPS</string>
    <string name="todo">Todo</string>
    <string name="restaurant">Restaurant</string>
    <string name="calculator">Calculator</string>
    <string name="my_email_address">My Email Address</string>
    <string name="my_password">My Password</string>
    <string name="counter_app">Counter App</string>
    <string name="imageView_example">ImageView Example</string>
    <string name="show_notification">Show Notification</string>
    <string name="get_started">Get Started</string>
    <string name="next_button">Next Button</string>
    <string name="skip">Skip</string>
    <string name="main_image">Main Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dummy">Dummy</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="enter_name">Enter Name</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="web_client_id">231141689817-6ebanjqkoalfskr2jh18h8bec9rsopoa.apps.googleusercontent.com</string>
    <string name="profileinformation">ProfileInformation : </string>
    <string name="retrive_data">Retrive Data</string>
    <string name="age">Age</string>
    <string name="new_first_name">New First Name</string>
    <string name="old_first_name">Old First Name</string>
    <string name="old_last_name">Old Last Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="old_age">Old Age</string>
    <string name="new_age">New Age</string>
    <string name="save_data">Save</string>
    <string name="retrieve_data">Retrieve</string>
    <string name="update_data">Update</string>
    <string name="delete_data">Delete</string>
    <string name="profiledetails">ProfileDetails:</string>
    <string name="upload_image">Upload Image</string>
    <string name="dowload_image">Dowload Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="enter_notification_title">Enter notification title</string>
    <string name="enter_notification_message">Enter Notification Message</string>
    <string name="user_device_token">User Device Token</string>
    <string name="send_notification">Send Notification</string>
    <string name="fragment_character_list">Fragment Character List</string>
    <string name="fragment_character_image">Fragment Character Image</string>
    <string name="characterphoto">CharacterPhoto</string>
    <string name="characterimage">CharacterImage</string>
    <string name="todolist_calculator">Todolist + Calculator</string>
    <string name="speakers_counter">Speakers + Counter</string>
    <string name="breaking_bad_api">Breaking Bad Api</string>
    <string name="shopping_list_item_app">Shopping List Item App</string>
    <string name="clothes_app">Clothes App</string>
    <string name="push_notification_app">Push Notification App</string>
    <string name="todolist_api_app">Todolist Api App</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
