<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivOnBoardingImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/main_image" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/custom_colors_text_primary"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="@dimen/_12sdp"/>

</LinearLayout>