<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".MotherOfTheApps">

    <Button
        android:id="@+id/btnTodoListAppAndCalculator"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/todolist_calculator"
        app:layout_constraintBottom_toTopOf="@+id/btnEventsAndCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEventsAndCounter"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/speakers_counter"
        app:layout_constraintBottom_toTopOf="@+id/btnBreakingBadApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTodoListAppAndCalculator" />

    <Button
        android:id="@+id/btnBreakingBadApp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/breaking_bad_api"
        app:layout_constraintBottom_toTopOf="@+id/btnShoppingListApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEventsAndCounter" />

    <Button
        android:id="@+id/btnShoppingListApp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list_item_app"
        app:layout_constraintBottom_toTopOf="@+id/btnClothesApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBreakingBadApp" />

    <Button
        android:id="@+id/btnClothesApp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/clothes_app"
        app:layout_constraintBottom_toTopOf="@+id/btnPushNotificationApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShoppingListApp" />

    <Button
        android:id="@+id/btnPushNotificationApp"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/push_notification_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClothesApp" />
</androidx.constraintlayout.widget.ConstraintLayout>