<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:padding="@dimen/_14sdp">

    <TextView
        android:id="@+id/tvAddShoppingItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_shopping_item"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etShoppingItemDialogName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/etShoppingItemDialogAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddShoppingItemTitle" />

    <EditText
        android:id="@+id/etShoppingItemDialogAmount"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddShoppingItemTitle" />

    <TextView
        android:id="@+id/tvAddShoppingItemCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@+id/tvAddShoppingItemAdd"
        app:layout_constraintTop_toBottomOf="@+id/etShoppingItemDialogAmount" />

    <TextView
        android:id="@+id/tvAddShoppingItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShoppingItemDialogAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>