<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".clothesapp.ui.ClothingApp">

    <EditText
        android:id="@+id/etNotificationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/enter_notification_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNotificationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/_16sdp"
        android:inputType="text"
        android:hint="@string/enter_notification_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotificationTitle" />

    <EditText
        android:id="@+id/etNotificationToken"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_device_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotificationMessage" />

    <Button
        android:id="@+id/btnSendNotification"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNotificationToken" />
</androidx.constraintlayout.widget.ConstraintLayout>